--- a/react/package.json
+++ b/react/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "skilltests-react",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test-storybook": "test-storybook"
-  },
-  "dependencies": {
-    "@types/node": "20.4.7",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
-    "@jest/globals": "^29.6.2",
-    "@storybook/addon-essentials": "^7.2.1",
-    "@storybook/addon-interactions": "^7.2.1",
-    "@storybook/addon-links": "^7.2.1",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.2.1",
-    "@storybook/nextjs": "^7.2.1",
-    "@storybook/react": "^7.2.1",
-    "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@types/jest": "^29.5.3",
-    "concurrently": "^8.2.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "http-server": "^14.1.1",
-    "i": "^0.3.7",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "jest-mock": "^29.6.2",
-    "next-router-mock": "^0.9.9",
-    "storybook": "^7.2.1",
-    "storybook-test": "^0.1.8",
-    "ts-jest": "^29.1.1"
-  },
-  "packageManager": "yarn@3.6.1"
+	"name": "skilltests-react",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"test-storybook": "test-storybook"
+	},
+	"dependencies": {
+		"@types/node": "20.4.7",
+		"@types/react": "18.2.18",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.14",
+		"convert": "^4.13.1",
+		"eslint": "8.46.0",
+		"eslint-config-next": "13.4.12",
+		"next": "13.4.12",
+		"postcss": "8.4.27",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"tailwindcss": "3.3.3",
+		"typescript": "5.1.6"
+	},
+	"devDependencies": {
+		"@jest/globals": "^29.6.2",
+		"@storybook/addon-essentials": "^7.2.1",
+		"@storybook/addon-interactions": "^7.2.1",
+		"@storybook/addon-links": "^7.2.1",
+		"@storybook/addon-onboarding": "^1.0.8",
+		"@storybook/blocks": "^7.2.1",
+		"@storybook/nextjs": "^7.2.1",
+		"@storybook/react": "^7.2.1",
+		"@storybook/test-runner": "^0.13.0",
+		"@storybook/testing-library": "^0.2.0",
+		"@testing-library/jest-dom": "^6.0.0",
+		"@types/jest": "^29.5.3",
+		"concurrently": "^8.2.0",
+		"eslint-plugin-storybook": "^0.6.13",
+		"http-server": "^14.1.1",
+		"i": "^0.3.7",
+		"jest": "^29.6.2",
+		"jest-environment-jsdom": "^29.6.2",
+		"jest-mock": "^29.6.2",
+		"next-router-mock": "^0.9.9",
+		"storybook": "^7.2.1",
+		"storybook-test": "^0.1.8",
+		"ts-jest": "^29.1.1"
+	},
+	"packageManager": "yarn@3.6.1"
 }
